# PFE_ThreatIntelligence

./: pyproject.toml
.github/workflows/: github-actions.yml
callerapi/misp/: reader.py
dags/watcher_dag/: fetch_and_ingest_dag.py  sftptotidb.py  watcher_dag.py
github/workflows/: build.yml
watcher/: constant.py  entry_point_sftp_listener.py  event_handlers.py  feed_parsers_shadow.py  feed_watcher.py  main.py  rfilecmp.py  server.py  sftp_file_listener.py  shadow_transformation.py  shadow_transformation_refined.py  ssh_mixin.py
watcher/callerapi/misp/: main.py  main_test.py  main_transformation_misp.py  reader.py
watcher/clients/: sftp.py
watcher/config/: cache.py  config.yaml
watcher/parser/: data_parser.py  main.py
watcher/schemas/: __init__.py  ingest_entry_point.py  ingest_tidb.py  models.py
watcher/schemas/parser/: mainn.py
