
[tool.poetry]
name = "watcher"
version = "0.1.0"
description = "File watcher"
authors = ["Syrine ben slim <syrinebenslim98@gmail.com>"]
maintainers = ["Syrine ben slim <syrinebenslim98@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "http://test"
repository = "https://github.com/hackersandslackers/python-poetry-tutorial/"
documentation = "https://hackersandslackers.com/python-poetry/"
keywords = [
    "Poetry",
    "Virtual Environments",
    "Tutorial",
    "Packages",
    "Pip"
]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "*"
psutil = "*"
certifi = "^2023.11.17"
watchdog = "4.0.0"
SQLAlchemy = "2.0.29"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "watcher.main:main"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/python-poetry-tutorial/issues"
