
[tool.poetry]
name = "watcher"
version = "0.72.0"
description = "File watcher"
authors = ["Syrine ben slim <syrinebenslim98@gmail.com>"]
maintainers = ["Syrine ben slim <syrinebenslim98@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "http://test"
repository = "https://github.com/hackersandslackers/python-poetry-tutorial/"
documentation = "https://hackersandslackers.com/python-poetry/"
keywords = [
    "Poetry",
    "Virtual Environments",
    "Tutorial",
    "Packages",
    "Pip"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
loguru = "*"
psutil = "*"
certifi = "^2023.11.17"
watchdog = "4.0.0"
SQLAlchemy = "1.4.52"
PyMySQL = "1.1.0"
python-dotenv = "1.0.0"
pandas = "2.1.4"
paramiko = "3.4.0"
colorama = "0.4.6"
requests = "2.32.3"
apache-airflow ="2.9.3"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "watcher.main:main"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/python-poetry-tutorial/issues"



